2012-09-25 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.13.16

	* Rewrite relink_symlinks perl script in shell

2012-06-06 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.15

	* handle both /sbin/install-info & /usr/sbin/install-info

2012-06-04 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.14

	* /sbin/install-info has been moved to /usr/sbin/install-info
	
2012-03-20 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.13

	* don't remove /usr/share/info/dir if /sbin/install-info is found in
	  buildroot

2012-03-16 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.13.12
	* remove all .la files

2012-03-10 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.11
	* make sure that shared libraries & mono libraries/executables have
	  executable permissions set

2011-12-23 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.10
	* support multiple libtool files with multiple pkgconfig files

2011-12-22 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.9
	* don't remove libtool .la files which has 'shouldnotlink=yes' set
	  (thx Buchan!)

2011-12-08 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.8
	* fix error message printed when there's no pkgconfig dir

2011-12-06 Per Øyvind Karlsen <pkarlsen@mandriva.com> 0.31.7
	* remove libtool .la files

2011-04-16 Funda Wang <fwang@mandriva.org> 0.31.6
	* remove empty dirs for perl modules

2010-12-15 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.5
	* reenable xz --text (support were dropped by accident for xz 5.0)

2010-11-22 Funda Wang <fwang@mandriva.org> 0.31.4
	* xz 5.0 do not support '--text' option now.

2010-03-09 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.3
        * be sure to still strip files even if we're not building -debug
	  packages (fixing regression from 0.31.1)

2010-03-05 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.2
	* fix typo in macros file.. :/

2010-03-05 Per Øyvind Karlsen <peroyvind@mandriva.org> 0.31.1
	* don't duplicate stripping already done in rpm's find-debuginfo.sh